<resources>
    <string name="app_name">RydeHomeUser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="google_maps_key">AIzaSyDfC5nxxgV7aqR2QQrpFm3ALGrEYSNkk48</string>-->
    <string name="google_maps_key">AIzaSyDKpkPtlJLZC0KR-p-cvb4QXG_5JtXFL40</string>
    <string name="facebook_app_id">3519749641383842</string>
    <!--<string name="google_maps_key">AIzaSyDKjf-2y6cIRRvugCwO8n4uahFNQ4tZAvQ</string>-->
    <!--<string name="google_maps_key">AIzaSyBfffgfmuX2uumW09fqJZKbEHOnPqSPzaE</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_rydeHome">Welcome to RYDE HOME</string>
    <string name="connect_social_account">Or connect using a social account</string>
    <string name="enter_mobilenum">Enter your mobile number</string>
    <string name="enter_valid_mobilenum">Enter your valid mobile number</string>
    <string name="mobilenum">Mobile Number</string>
    <string name="next">NEXT</string>
    <string name="submit">Submit</string>
    <string name="update">UPDATE</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="wallet">Wallet</string>
    <string name="past">Past</string>
    <string name="share">SHARE</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="share_s">Share</string>
    <string name="contacts">Contacts</string>
    <string name="saved_places">Saved Places</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="please_select_date">Please select Date</string>
    <string name="please_select_time">Please select Time</string>
    <string name="want_to_logout">Are You sure want to signout?</string>
    <string name="want_to_del_card">Are you sure want to delete this card?</string>
    <string name="fare_split_with">Fare Split with</string>
    <string name="cancel">Cancel</string>
    <string name="info">Information</string>
    <string name="split_fare">Split Fare</string>
    <string name="booking_cancel">Booking Cancel</string>
    <string name="cancellation_fee">Cancellation Fee</string>
    <string name="cancellation_fee_charges">A cancellation fee of 5 pounds will be charged</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="favourites">Favourites</string>
    <string name="others">Others</string>
    <string name="signout">Signout</string>
    <string name="select_your_contacts">Select your contacts</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="add_more">Add More</string>
    <string name="other_address">Other Address</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="request_cab">REQUEST CAB</string>
    <string name="choose_cab_type">Choose cab type</string>
    <string name="location_from">Location from</string>
    <string name="location_to">Location to</string>
    <string name="schedule_pickup">Schedule pick up</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_stop">Add Stop</string>
    <string name="where_to_go">Where to go?</string>
    <string name="unverified">Unverified</string>
    <string name="verified">Verified</string>
    <string name="edit_account">Edit Account</string>
    <string name="share_trip">Share Trip</string>
    <string name="your_trips">Your Trips</string>
    <string name="confirm_pickup">Confirm Pick-Up</string>
    <string name="more_saved_places">More saved places</string>
    <string name="add_saved_places">Add Saved places</string>
    <string name="your_last_trip">Your last trip</string>
    <string name="your_trip_with">Your trip with</string>
    <string name="report_issue_this_trip">Report an issue with this trip</string>
    <string name="send_free_trips">Send your friends free trips</string>
    <string name="free_trips">Free Trips</string>
    <string name="confirm_your_pickup">Confirm your pick-up</string>
    <string name="keep_min_stops">Please keep stops to 3 minutes or less</string>
    <string name="face_charge">As a courtesy for your driver\'s time.The time limit for each stops to 3 minutes less
        otherwise you may face charge.
    </string>
    <string name="share_free_rides">Share the RYDE HOME love and give friends free rides to try RYDE HOME worth upto
    </string>

    <string name="some_error">Some Error Occurred</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="source_loc">"Please enter source location."</string>
    <string name="dest_loc">"Please enter destination location."</string>

    <string name="want_to_cancel_ride">Are you sure want to cancel the ride?</string>
    <string name="split">Split</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="call">Call</string>
    <string name="poor">Poor</string>
    <string name="good">Good</string>
    <string name="avg">Average</string>
    <string name="enter_tip">Enter Tip:</string>
    <string name="very_good">Very Good</string>
    <string name="s_address">Source Address:</string>
    <string name="d_address">Destination Address:</string>
    <string name="ride_status">Ride Status:</string>


    <string name="any_pickup_notes">Any pick-up notes</string>
    <string name="connecting_nearby_drivers">Connecting you to 8 nearby drivers</string>
    <string name="share_invitation_code">Share your invitation code</string>
    <string name="invitations_work">How invitations work</string>
    <string name="trip_fare">Trip fare</string>
    <string name="trip_details">Trip Details</string>
    <string name="trips">Trips</string>
    <string name="years">Years</string>
    <string name="rating">Rating</string>
    <string name="excellent">Excellent</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="total_distance">TOTAL DISTANCE</string>
    <string name="paid_by_card">Paid by Card</string>
    <string name="pay_by_card">Pay by Card</string>
    <string name="sub_total">Subtotal</string>
    <string name="receipt">Receipt</string>
    <string name="card">Card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="personal">Personal</string>
    <string name="write_thank_note">Write a thank you note</string>
    <string name="add_business_profile">Add Business Profile</string>
    <string name="sort_rides">Sort your rides for easier expensing</string>
    <string name="card_number">Card Number</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="knows">Knows</string>
    <string name="read_full_review">Read full review</string>
    <string name="change_mode">Change mode</string>
    <string name="status">Status</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="sos">SOS</string>
    <string name="emergency">Emergency</string>
    <string name="add_or_change">Add or change</string>
    <string name="change">Change</string>
    <string name="share_trip_status">Share trip status</string>
    <!--  <string name="enter_business_id">Please Enter Business Id</string>-->

    <string name="involved_in_accident">I was involved in an accident</string>
    <string name="review_fare_fees">Review my fare or fees</string>
    <string name="lost_an_item">I lost an item</string>
    <string name="driver_was_unprofessional">My driver was unprofessional</string>
    <string name="vehicle_unexpected">My vehicle wasn\'t what i expected</string>
    <string name="different_issue">I had a different issue</string>
    <string name="loyalty">Loyalty</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="distance">Distance -</string>


    <string name="txt_fName">First Name</string>
    <string name="txt_lName">Last Name</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_email_address">Email Address</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phoneno">Enter Phone number</string>
    <string name="txt_passsword">Password</string>
    <string name="enter_passsword">Enter Password</string>
    <string name="password_six_chars">Password must be atleast 8 characters</string>
    <string name="save">SAVE</string>
    <string name="paypal">Paypal</string>
    <string name="pay">PAY</string>
    <string name="card_payment">Card Payment</string>
    <string name="completed">COMPLETED</string>
    <string name="give_compliment">Give a compliment</string>
    <string name="add_a_tip">Add a Tip for</string>
    <string name="tip">Tip</string>
    <string name="phone_empty">Phone number is empty</string>
    <string name="phone_invalid">Phone number is invalid</string>


    <string name="enter_cvv">Enter CVV</string>
    <string name="enter_business_id">Enter your Business ID</string>
    <string name="sel_car_type">Please Select Car Type.</string>
    <string name="rider_profiles">Rider Profiles</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="add">Add</string>
    <string name="use_reward_points">Use Reward Points</string>
    <string name="add_promo_code_s">Add promo code</string>
    <string name="code">Code</string>
    <string name="total">Total</string>
    <string name="total_points">Total Points</string>
    <string name="enter_points">Enter Points</string>
    <string name="payments_methods">Payment Methods</string>
    <string name="payment">PAYMENT</string>
    <string name="payment_s">Payment</string>
    <string name="upcoming">Upcoming</string>
    <string name="f_name">First Name</string>
    <string name="enter_f_name">Enter First Name</string>
    <string name="l_name">Last Name</string>
    <string name="enter_l_name">Enter Last Name</string>
    <string name="enter_code">Please Enter Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="bank_details">Bank Details</string>
    <string name="earned">Earned-</string>
    <string name="name">What is your name?</string>
    <string name="bussiness_id_if_any">Bussiness ID (If any)</string>
    <string name="associated_with_company">Are you associated with any company?</string>
    <string name="txt_verify_mobile">Verify Mobile</string>
    <string name="inst_verify_mobile">We are unable to auto verify your number.Please enter the code sent to the
    </string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="otp_not_match">OTP does not match</string>
</resources>
