<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/rootPayment"
              tools:context=".ui.activities.home.fragment.payment.Payment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/payments_methods"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_Payment"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
        <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/card"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_gravity="center_vertical"
                android:text="@string/card"/>
    </LinearLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAppTheme"
            android:id="@+id/txtview_addPaymentMethod"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/add_payment_method"/>


    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@color/very_light_gray"></View>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/rider_profiles"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_accSettings"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
        <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/personaal"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_gravity="center_vertical"
                android:text="@string/personal"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:orientation="horizontal">
        <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/buisness"/>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rel_addBussinessProfile"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_8sdp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp"
                    android:id="@+id/txtview_addBusPro"
                    android:text="@string/add_business_profile"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_12sdp"
                    android:layout_below="@+id/txtview_addBusPro"
                    android:text="@string/sort_rides"/>


        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/rel_enterBussinessID"
                android:layout_gravity="center_vertical">

            <!--   <com.google.android.material.button.MaterialButton
                       style="@style/Widget.MaterialComponents.Button"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="@dimen/_13sdp"
                       android:paddingLeft="@dimen/_12sdp"
                       android:paddingRight="@dimen/_12sdp"
                       android:paddingTop="@dimen/_5sdp"
                       android:paddingBottom="@dimen/_5sdp"
                       android:layout_marginRight="@dimen/_6sdp"
                       android:layout_alignParentRight="true"
                       android:backgroundTint="@color/colorAppTheme"
                       android:text="@string/update"/>-->


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_full_themecolored_corners"
                    android:text="@string/update"
                    android:id="@+id/update_payment"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13sdp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_12sdp"
                    android:paddingRight="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_6sdp"
                    android:layout_alignParentRight="true"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/enter_business_id"
                      android:textColorHint="@color/light_gray"
                      android:layout_marginLeft="@dimen/_16sdp"
                      android:layout_marginRight="@dimen/_6sdp"
                      android:singleLine="true"
                      android:backgroundTint="@color/light_gray"
                      android:id="@+id/edt_buinessId"
                      android:textSize="@dimen/_12sdp"
                      android:layout_toLeftOf="@+id/update_payment"/>

        </RelativeLayout>


    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@color/very_light_gray"></View>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/promotions"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAppTheme"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/txtview_addPromoCode"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/add_promo_code"/>

</LinearLayout>