<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottom_sheet_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              app:behavior_peekHeight="90dp"
              app:behavior_hideable="false"
              android:background="@color/colorWhite"
              app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!--app:layout_behavior="com.your.package.LockableBottomSheetBehavior"-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">


        <ImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:background="@drawable/clock_green"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_min_stops"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colorBlack"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face_charge"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorBlack"/>


        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:textSize="@dimen/_13sdp"
                android:id="@+id/done_stopInfoBottomsheet"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:backgroundTint="@color/colorAppTheme"
                android:text="@string/search"/>

    </LinearLayout>
</LinearLayout>